--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,4 +14,4 @@ install:
   - chmod +X ./api-ci/rest/gradlew
 
 build_script:
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./api-ci/rest/gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
